# butai

./: .gitignore  Cargo.toml  README.md  butai.toml  rustfmt.toml
common/src/: macros.rs  scraper.rs
engine/: Cargo.toml
engine/src/: browser.rs  config.rs  consts.rs  engine.rs  error.rs  limiter.rs  log.rs  main.rs  opts.rs  scraper.rs  site.rs  utils.rs
ghost/: Cargo.toml
protocol/: Cargo.toml
scraper/src/: site.rs
scraper/src/ghost/: mod.rs
scraper/src/scout/: mod.rs
scraper/src/script/: mod.rs
script/: Cargo.toml
vision/: Cargo.toml
