[workspace]
resolver = "3"
members = ["engine", "vision", "common", "scraper", "protocol"]

[workspace.dependencies]
chromiumoxide = { version = "0.9.1" }
clap = { version = "4.6.1", features = ["derive", "env"] }
prost = { version = "0.14" }
prost-types = { version = "0.14" }
serde = { version = "1.0.208", features = ["derive"] }
thiserror = { version = "2.0.18" }
tonic-prost = { version = "0.14" }
tonic-prost-build = { version = "0.14" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tonic = { version = "0.14", default-features = false }
