[package]
name = "engine"
version = "0.1.0"
edition = "2024"
description = "Butai scraping control engine"

[dependencies]
clap.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

humantime = { version = "2.1.0" }
tokio = { version = "1.52.1", features = ["net", "rt-multi-thread", "signal", "time", "macros"] }
tokio-util = { version = "0.7.11", default-features = false }
