[package]
name = "engine"
version = "0.1.0"
edition = "2024"
description = "Butai scraping control engine"

[dependencies]
clap.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

enum_dispatch = { version = "0.3.13" }
futures = { version = "0.3.23" }
humantime = { version = "2.3.0" }
serde = { version = "1.0.208", features = ["derive"] }
slotmap = { version = "1.1.1", features = ["serde"] }
tokio = { version = "1.52.1", features = ["net", "rt-multi-thread", "signal", "time", "macros", "fs"] }
tokio-util = { version = "0.7.18", default-features = false }
toml = { version = "1.1.2", features = ["serde"] }
url = { version = "2.5.2", features = ["serde"] }